# peg

./: .gitignore  README.md  meson.build  meson_options.txt
examples/: meson.build
src/: leg.c  meson.build  peg.peg-c
